[package]
name = "rust_todo_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "CssStyleDeclaration",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlFormElement",
    "Node",
    "Window",
    "console"
] }
console_error_panic_hook = "0.1"
js-sys = "0.3"
